tests/NormalTests/paczka1/fuzzy1/84893584.err
Error in line 3: 6C8i26stw A425 48,2
Error in line 5: 6C8i26stw S623 2,0
Error in line 4: UeCdCF9mIfI S472 88,8
Error in line 9: UeCdCF9mIfI S623 14,4
Error in line 20: CVhBACZXVNi S623 74,9
Error in line 33: 6C8i26stw S623 54,2
Error in line 35: 6C8i26stw S472 65,3
Error in line 34: CVhBACZXVNi S472 31,1
